--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.17",
     "@types/react-dom": "^18.2.7",
+    "i18next": "^23.4.0",
+    "i18next-browser-languagedetector": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.64.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
